--- a/app/src/main/res/layout/notification_header.xml
+++ b/app/src/main/res/layout/notification_header.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text=""
-        android:textColor="@color/divider"
-        android:textSize="@dimen/sp_16" />
+        android:textColor="@color/black_overlay"
+        android:textSize="14sp" />
 
 </LinearLayout>
