--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -53,9 +53,7 @@
             <WebView
                 android:id="@+id/article_content_web_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            </WebView>
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
