--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
 
     <color name="lightGray">#e0e0e0</color>
     <color name="white">#ffffff</color>
-    <color name="dark">#5e5656</color>
+    <color name="dark">#3c3c3c</color>
     <color name="hint">#666262</color>
     <color name="black">#000000</color>
     <color name="divider">#c9cbcd</color>
