--- a/app/src/main/res/layout/notification_header.xml
+++ b/app/src/main/res/layout/notification_header.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/dp_6"
     android:orientation="horizontal"
+    android:gravity="center"
     android:background="@color/disable">
 
     <TextView
         android:id="@+id/notification_header_text"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text=""
